@@ -227,6 +227,16 @@ BOOL CALLBACK MonitorCallB(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPARAM lParam
 			GetWindowRect(hwndDlg,&wrect);
 			Monitor_wndx = wrect.left;
 			Monitor_wndy = wrect.top;
+
+			#ifdef WIN32
+			if (wrect.right < 59) {
+			Monitor_wndx = 0;
+			}
+			if (Monitor_wndy < -18) {
+			Monitor_wndy = -18;
+			}
+			#endif
+
 			break;
 		};
 
