@@ -90,6 +90,16 @@ BOOL CALLBACK TracerCallB(HWND hwndDlg, UINT uMsg, WPARAM wParam, LPARAM lParam)
 			GetWindowRect(hwndDlg,&wrect);
 			Tracer_wndx = wrect.left;
 			Tracer_wndy = wrect.top;
+
+			#ifdef WIN32
+			if (wrect.right < 59) {
+			Tracer_wndx = 0;
+			}
+			if (Tracer_wndy < -18) {
+			Tracer_wndy = -18;
+			}
+			#endif
+
 			break;
 		};
 		case WM_INITDIALOG:
